--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "vite": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "vite": "^6.2.0"
   }
 }
